# google-workspace-tools

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
docs/: cli-schema.json
src/google_workspace_tools/: __init__.py  settings.py
src/google_workspace_tools/cli/: __init__.py  app.py  formatters.py  output.py  schemas.py  utils.py
src/google_workspace_tools/cli/commands/: __init__.py  calendar.py  credentials.py  download.py  mail.py  utility.py
src/google_workspace_tools/core/: __init__.py  config.py  exporter.py  filters.py  storage.py  types.py
src/google_workspace_tools/toolkit/: __init__.py  gdrive.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_cli.py  test_cli_calendar.py  test_cli_gmail.py
tests/unit/: __init__.py  test_calendar_export.py  test_config.py  test_exporter.py  test_gmail_export.py  test_spreadsheet_markdown.py  test_storage.py
