[project]
name = "google-workspace-tools"
version = "0.1.0"
description = "Google Workspace document export toolkit with CLI and optional AI agent integration"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Marcel Hild", email = "hild@b4mad.net" }
]
requires-python = ">=3.11"
keywords = [
    "google-drive",
    "google-docs",
    "google-sheets",
    "google-slides",
    "google-workspace",
    "document-export",
    "markdown",
    "cli",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    # Core Google API dependencies
    "google-auth-oauthlib>=1.2.2",
    "google-api-python-client>=2.176.0",
    "google-auth-httplib2>=0.2.0",
    # HTML to Markdown conversion
    "html-to-markdown>=2.14.0",
    # Excel/Office to Markdown conversion
    "markitdown>=0.1.0",
    "openpyxl>=3.1.0",
    # Configuration and validation
    "pydantic>=2.11.5",
    "pydantic-settings>=2.0.0",
    # Logging
    "loguru>=0.7.3",
    # CLI framework
    "typer>=0.9.0",
    "rich>=13.0.0",
    # YAML config support
    "PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/durandom/google-workspace-tools"
Documentation = "https://github.com/durandom/google-workspace-tools#readme"
Repository = "https://github.com/durandom/google-workspace-tools.git"
Issues = "https://github.com/durandom/google-workspace-tools/issues"

# Optional dependencies for Agno toolkit
[project.optional-dependencies]
agno = [
    "agno>=2.0.0,<3.0",
]
keyring = [
    "keyring>=25.0.0",
]

# CLI entry point
[project.scripts]
gwt = "google_workspace_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Development dependencies
[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pre-commit>=3.0.0",
    "mypy>=1.16.1",
    "types-PyYAML",
]
docs = [
    "pdoc>=14.0.0",
]

# Ruff configuration
[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["B008"]
select = ["E", "F", "W", "I", "B", "UP", "PT", "SIM"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

# Pytest configuration
[tool.pytest.ini_options]
addopts = "-v --tb=short --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: Pure unit tests with no external dependencies",
    "integration: Tests that use mocked external services",
    "e2e: End-to-end CLI tests",
    "slow: Tests that take longer than 1 second",
]

# Coverage
[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

# MyPy
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
